crates/executor/src/tests/sql/ddl/snapshots/table/query_alter_iceberg_table.snap
---
source: crates/executor/src/tests/sql/ddl/table.rs
description: "\"ALTER ICEBERG TABLE test ADD col INT;\""
info: "Setup queries: CREATE TABLE embucket.public.test (id INT) as VALUES (1), (2)"
---
Ok(
    [
        "+----------------------------------+",
        "| status                           |",
        "+----------------------------------+",
        "| Statement executed successfully. |",
        "+----------------------------------+",
    ],
)
