crates/executor/src/tests/sql/ddl/snapshots/table/query_alter_missing_table.snap
---
source: crates/executor/src/tests/sql/ddl/table.rs
description: "\"ALTER TABLE embucket.public.missing ADD COLUMN new_col INT\""
---
Err(
    "Error: Table missing not found in embucket.public",
)
