crates/executor/src/tests/sql/ddl/snapshots/table/query_alter_table.snap
---
source: crates/executor/src/tests/sql/ddl/table.rs
description: "\"ALTER TABLE embucket.public.test ADD COLUMN new_col INT\""
info: "Setup queries: CREATE TABLE embucket.public.test (id INT) as VALUES (1), (2)"
---
Ok(
    [
        "+----------------------------------+",
        "| status                           |",
        "+----------------------------------+",
        "| Statement executed successfully. |",
        "+----------------------------------+",
    ],
)
