crates/executor/src/tests/sql/ddl/snapshots/table/query_copy_into_without_volume.snap
---
source: crates/executor/src/tests/query.rs
description: "\"SELECT SUM(L_QUANTITY) FROM embucket.public.lineitem;\""
info: "Setup queries: CREATE TABLE embucket.public.lineitem (\n    L_ORDERKEY BIGINT NOT NULL,\n    L_PARTKEY BIGINT NOT NULL,\n    L_SUPPKEY BIGINT NOT NULL,\n    L_LINENUMBER INT NOT NULL,\n    L_QUANTITY DOUBLE NOT NULL,\n    L_EXTENDED_PRICE DOUBLE NOT NULL,\n    L_DISCOUNT DOUBLE NOT NULL,\n    L_TAX DOUBLE NOT NULL,\n    L_RETURNFLAG CHAR NOT NULL,\n    L_LINESTATUS CHAR NOT NULL,\n    L_SHIPDATE DATE NOT NULL,\n    L_COMMITDATE DATE NOT NULL,\n    L_RECEIPTDATE DATE NOT NULL,\n    L_SHIPINSTRUCT VARCHAR NOT NULL,\n    L_SHIPMODE VARCHAR NOT NULL,\n    L_COMMENT VARCHAR NOT NULL );; COPY INTO embucket.public.lineitem FROM 's3://embucket-testdata/tpch/lineitem.csv' FILE_FORMAT = ( TYPE = CSV );"
---
Ok(
    [
        "+------------------------------------------+",
        "| sum(embucket.public.lineitem.l_quantity) |",
        "+------------------------------------------+",
        "| 1199533.0                                |",
        "+------------------------------------------+",
    ],
)
