crates/executor/src/tests/sql/ddl/snapshots/table/query_create_table_as_select_from_values.snap
---
source: crates/executor/src/tests/sql/ddl/table.rs
description: "\"SELECT * FROM embucket.public.testtable\""
info: "Setup queries: CREATE OR REPLACE TABLE embucket.public.testtable AS SELECT * FROM VALUES (null); INSERT INTO embucket.public.testtable VALUES (null), ('fff')"
---
Ok(
    [
        "+---------+",
        "| column1 |",
        "+---------+",
        "|         |",
        "|         |",
        "| fff     |",
        "+---------+",
    ],
)
