crates/executor/src/tests/sql/ddl/snapshots/table/query_create_table_quoted_identifiers.snap
---
source: crates/executor/src/tests/sql/ddl/table.rs
description: "\"SELECT * FROM embucket.\\\"test public\\\".\\\"test table\\\"\""
info: "Setup queries: CREATE SCHEMA embucket.\"test public\"; CREATE TABLE embucket.\"test public\".\"test table\" (id INT); INSERT INTO embucket.\"test public\".\"test table\" VALUES (1), (2)"
---
Ok(
    [
        "+----+",
        "| id |",
        "+----+",
        "| 1  |",
        "| 2  |",
        "+----+",
    ],
)
